--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="bg-secondary text-white py-2">
     <div class="container d-flex justify-content-center gap-4">
       <a href="#productos" class="text-white text-decoration-none">Productos</a>
-      <a href="#factura" class="text-white text-decoration-none">factura</a>
+    <a href="factura.pdf" target="_blank" class="text-white text-decoration-none">factura</a>
       <a href="#carrito" class="text-white text-decoration-none">carrito</a>
       <a href="#cliente" class="text-white text-decoration-none">cliente</a>
       <a href="#equipo" class="text-white text-decoration-none">equipo</a>
